--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
-Testing.
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin git@github.com:iqbalrules/er.iqbal.ahmad.github.io.git
-git push -u origin main
+<h1> Skill set</h1>
+<ul>
+    <li> Core PHP, Laravel, ES6 Javascript, REST API, Bootstrap, jQuery, AJAX, mobile ready,</li>
+    <li> JS Framework - Vue, composition APIs</li>
+    <li> Backend - MySQL database </li>
+    <li> eCommerce - WooCommerce API</li>
+    <li> PHP REST API
+    <li> Basic skills - HTML5, CSS, </li>
+</ul>
+
+<h1> Features </h1>
+<ul>
+    <li>Payment Gateway Integration</li>
+    <li> Client side - 1 Reactive Web 2 Server side rendering 3 Basic http request- response model 4 Single Page Application</li>
+    <li> Server side - 1 REST API</li>
+    <li> Progressive Web Application design
+    <li>Scalable and secure</li>
+</ul>
+
+<h1>Feature Projects</h1>
+1 Automation site - To monitor and control device status.
+    It uses core PHP, MySQL database at backend and Bootstrap, jQuery and AJAX on frontend. It keeps searchable log of data of last 30 days. It also use Google Map and real-time Google Chart for better UX.
+2 Company web site - To place order online
+    It allows a user to generate quotation, place orders, make payments, download PDF invoices and track delivery status.
+3. ERP Modules - Sales, Purchase, Inventory.
+4. Relation Manager - Keep track of all relationships with contacts.
+    It is designed in Laravel.
+5. eCommerce - Site with Cart and wishlist and many other features.
+
+Presently working with M/S. Effineers Systems P Ltd. as PHP developer in team of 5. 
+previous Companies
