--- a/index.html
+++ b/index.html
@@ -28,4 +28,11 @@
 5. eCommerce - Site with Cart and wishlist and many other features.
 
 Presently working with M/S. Effineers Systems P Ltd. as PHP developer in team of 5. 
-previous Companies
+
+Previous Employers
+1. M/S. Capricot Technologies, - Design automation in AutoLISP language.
+2. M/S. Boosey & Hawkes – a British MNC- inventory management
+3. M/S. Kampsax - a Swedish MNC – Development of automated drawing system
+4. M/S. AKR Surveying – GIS mapping app
+5. M/S. AC Humidification System P Ltd – Integrating order and production control
+8. M/S. KCC Softwares Ltd. – various client projects
