--- a/index.html
+++ b/index.html
@@ -36,3 +36,8 @@ Previous Employers
 4. M/S. AKR Surveying – GIS mapping app
 5. M/S. AC Humidification System P Ltd – Integrating order and production control
 8. M/S. KCC Softwares Ltd. – various client projects
+
+Current CTC: 8 LPA
+Expected CTC: 13 LPA
+Current location: Delhi NCR
+Open to relocate any major metro city in India (Work from Home during covid pandemic) 
